--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
+
+.message-sent-by-me {
+    text-align: right;
+    display: block;
+}
+
+.contact {
+    cursor: pointer;
+}
