--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,31 @@
-<div *ngIf="!currentUser.id">
-    <md-toolbar color="primary">Chat</md-toolbar>
+<md-toolbar color="primary">Chat</md-toolbar>
+
+<div *ngIf="!isChatOpen">
     <md-input-container>
         <input md-input placeholder="Name" [(ngModel)]="currentUser.name" autofocus>
     </md-input-container>
+    <button (click)="startChatting()" md-button color="primary">
+        Save name
+    </button>
+</div>
+
+<div *ngIf="isChatOpen">
     <md-input-container>
         <input md-input placeholder="Message" [(ngModel)]="message">
     </md-input-container>
-    <button (click)="startChatting()" md-button color="primary">
+    <button (click)="sendMessage()" md-button color="primary">
         Send message
     </button>
 </div>
+
+<md-list *ngIf="isChatOpen">
+    <h3 md-subheader>Messages</h3>
+    <md-list-item *ngFor="let message of messageHistory">
+        <md-icon md-list-avatar>{{ message.sentBy }}</md-icon>
+        <h4 md-line>{{ message.content }}</h4>
+    </md-list-item>
+    <!--<md-divider></md-divider>-->
+</md-list>
 
 <div *ngIf="currentUser.id">
     <md-grid-list cols="2">
